import java.util.Scanner;

public class MainMenu {

    public void displayMenu() {

        System.out.println("1) Search after a specific movie");
        System.out.println("2)  ");
        System.out.println("0) Exit");
        Scanner c = new Scanner(System.in);

       /* switch (c) {
            case "1" -> {}
            case "2" ->
        }
*/


    }

}
