public class Season {
    private int seasonNumber;
    private int episodeNumber;

    public Season(int seasonNumber,int episodeNumber ) {
        this.seasonNumber = seasonNumber;
        this.episodeNumber = episodeNumber;
    }

}
