@startuml

class User {
    - String username
    - String password
    - ArrayList<Media> watchList
    - ArrayList<Media> watched
    + User(String username, String password)
    + void addToWatchList()
    + boolean markAsWatched()
    + removeFromWatchList()
    + getUser()
}

enum Genre {
    CRIME
    WAR
    DRAMA
    FAMILY
    ROMANCE
    SCI_FI
    COMEDY
    WESTERN
    THRILLER
    MUSIC
    ACTION
    BIOGRAPHY
    WAR
    HORROR
    MUSICAL
    FILM_NOIR
    SPORT
    HISTORY
    ADVENTURE
    MYSTERY
    ANIMATION
    DOCUMENTARY
}

class LoginMenu{

    -String username
    -String password
    + void signUp(String username, String password)
    + void login(String username, String password) = hmap.get(username);

}

class LoadUser {
    - HashMap<String username, String password> UserAccount
    + HashMap readFromFile()
    + void writeToFile()
}

class TextIO {
    - Scanner scan
    + boolean promptBinary(String msg)
    + String promptText(String msg)
    + int promptNumeric(String msg)
    + void displayMessage(String msg)
}

class Main {
+ static void main(String[] args)
}

class MainMenu {
    - TextIO io
    - SearchFunction search
    + ArrayList viewWatchList()
    + ArrayList viewWatched()
    + void playMedia()

}

class SearchFunction {
    boolean isSeries
    + void searchByGenre()
    + void searchByName()

    + void viewAll()
    - void viewMovies()
    - void viewSeries()
}

class LoadMedia {
    - List<Movie> movies
    - List<Series> series

    + void loadMovies()
    + void loadSeries()
}

abstract class Media {
    # String title
    # double rating
    # Set<Genre> genre
    + String getTitle()
    + double getRating()
    + Set<Genre> getGenre()
}

class Movie extends Media{
    - int releaseYear
    + Movie(String name, int releaseYear, Set<Genre> genres, double rating)
    + int getReleaseYear()
}

class Series extends Media{
    - int episodes
    - int seasons
    - boolean ongoing
    + Series(String title, Set<Genre> genres, double rating, )
    + List<Season> getSeasons()
}

class Season{
    - int seasonNumber
    - int episodeNumber
    + Season(int seasonNumber, int episodeNumber)
}

Main --> LoginMenu
LoginMenu --> User

Genre -* Media

LoadUser --> User

MainMenu <-- User
MainMenu *-- SearchFunction
LoadMedia --> Movie
LoadMedia --> Series


LoginMenu *--- TextIO
MainMenu *-- TextIO

MainMenu <-- Movie
MainMenu <-- Series

Series <-- Season

@enduml